# poker_solver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/app-tauri/: Cargo.toml  tauri.conf.json
crates/app-tauri/src/: error.rs  main.rs  setup.rs  state.rs
crates/app-tauri/src/commands/: eval.rs  mod.rs  range.rs  settings.rs
crates/poker-core/: Cargo.toml
crates/poker-core/src/: action.rs  bet_size.rs  board.rs  card.rs  deck.rs  error.rs  game_type.rs  hand.rs  lib.rs  position.rs  range.rs
crates/poker-eval/: Cargo.toml
crates/poker-eval/benches/: evaluator_bench.rs
crates/poker-eval/src/: blockers.rs  draws.rs  equity.rs  error.rs  fast_hash.rs  hand_rank.rs  isomorphism.rs  lib.rs  lookup_table.rs  table_gen.rs
docs/: 01_product_overview.md  02_solver_engine.md  03_study_mode.md  04_practice_mode.md  05_analyze_mode.md  06_gto_wizard_ai.md  07_nodelocking.md  08_aggregated_reports.md  09_tournament_icm.md  10_range_builder.md  11_ui_ux_screens.md  12_game_formats_and_pricing.md  13_competitive_landscape.md  14_architecture_blueprint.md  15_glossary.md  16_screenshot_analysis.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  test-setup.ts
screenshots/: MANIFEST.md
screenshots/blog/: INDEX.txt
screenshots/reviews/: INDEX.txt
screenshots/website/: INDEX.txt  aggregated-reports-default.avif  aggregated-reports-hover.avif  ai-solver-default.avif  ai-solver-hover.avif  analyze-anchor-hover.avif  analyze-anchor.avif  analyzer-2.0-default.avif  analyzer-2.0-hover.avif  automatic-hand-history-uploads-default.avif  automatic-hand-history-uploads-hover.avif  battle-heads-up-poker-default.avif  battle-heads-up-poker-display.avif  blog-section-default.avif  blog-section-hover.avif  coaching-section-default.avif  coaching-section-hover.avif  customizable-bet-sliders-hover.avif  customizable-bet-sliders.avif  daily-dose-of-gto-default.avif  (+40 more)
sources/: source_index.md
tests/: ui_ux_test_spec.md  visual_regression_tests.md
(+50 files in other folders)
