[package]
name = "app-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri v2 desktop shell for GTO Poker Solver"

[dependencies]
poker-core = { path = "../poker-core" }
poker-eval = { path = "../poker-eval" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tauri = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
