[package]
name = "poker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Foundational types for GTO poker solver"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
