[package]
name = "poker-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hand evaluator with lookup tables, equity, draws, blockers, suit isomorphism"

[dependencies]
poker-core = { path = "../poker-core" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "evaluator_bench"
harness = false
